--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "start": "node src/server.js",
+   "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "@sanity/client": "^3.0.0",
